main/wip: added readme.md and readme.ru.md
