# docs/swagger.json
@@ -60,6 +60,11 @@
         },
         "/api/v1/agenda/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "create task",
                 "consumes": [
                     "application/json"
@@ -301,7 +306,7 @@
                 }
             }
         },
-        "/api/v1/users/refresh": {
+        "/api/v1/auth/refresh": {
             "get": {
                 "description": "refresh user's access token",
                 "produces": [
@@ -333,7 +338,7 @@
                 }
             }
         },
-        "/api/v1/users/sign-in": {
+        "/api/v1/auth/sign-in": {
             "post": {
                 "description": "user sign in",
                 "consumes": [
@@ -379,7 +384,7 @@
                 }
             }
         },
-        "/api/v1/users/sign-up": {
+        "/api/v1/auth/sign-up": {
             "post": {
                 "description": "create user account",
                 "consumes": [
